@@ -1,4 +1,5 @@
 axspawn			Joerg Reuter DL1BKE <jreuter@poboxes.com>
+axwrapper		Tomi Manninen OH2BNS <oh2bns@sral.fi>
 ax25ipd			Rob Mayfield VK5XXX <mayfieldrob@mail.dec.com>
 ax25rtd			Klaus Kudielka <oe1kib@oe1xtu.ampr.org>
 bpqparms		Joerg Reuter DL1BKE <jreuter@poboxes.com>
