@@ -6,6 +6,7 @@ ax25d
 axctl
 axparms
 axspawn
+axwrapper
 beacon
 bpqparms
 mheard
