@@ -37,6 +37,7 @@ Display the version.
 .SH "SEE ALSO"
 .BR kill (1),
 .BR ax25 (4),
+.BR ax25wrapper (8),
 .BR netrom (4),
 .BR rose (4),
 .BR ax25d.conf (5).
