@@ -282,6 +282,7 @@ or
 /etc/ax25/ax25d.conf
 .SH "SEE ALSO"
 .BR ax25 (4),
+.BR ax25wrapper (8),
 .BR netrom (4),
 .BR rose (4),
 .BR axports (5),
